--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": "14.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/remix/slack-bolt-track-helloworld"
+    "url": "https://glitch.com/edit/#!/intro-slack-apps"
   },
   "license": "MIT",
   "keywords": [
